# xpra-tools

./: README.md  agent.py  config.py  plugin.py  pyproject.toml  simple_agent.py
src/: config.yaml  framebuffer.py  llm_agent.py  protocol.py  test_core.py
